Cambios en templates con llenado de especies

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/_InformeResSubDir.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/_InformeResSubDir.cshtml
@@ -39,7 +39,7 @@
             <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Exportar()" v-if="Informe.COD_INFORME_DIGITAL && Informe.ESTADO < States.FINALIZADO">
                 <i class="fa fa-file-word-o fa-fw"></i>Crear informe
             </button>
-            <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Registro()" v-if="Informe.COD_RES_SUB && Informe.ESTADO < States.COMPLETADO">
+            <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Registro()" v-if="Informe.COD_RES_SUB && Informe.ESTADO < States.COMPLETADO || Informe.FLG_ACTUALIZAR">
                 <i class="fa fa-save fa-fw"></i>Guardar
             </button>
             <div class="btn-group" v-if="Informe.COD_INFORME_DIGITAL">
