--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDInforme.cshtml
@@ -348,7 +348,7 @@
                 <td style="border: 1px solid #000;">${i+1}</td>
                 <td style="border: 1px solid #000;">${item.conducta}</td>
                 <td style="border: 1px solid #000;">
-                    <p><i>${item.tipo_infractor}</i></p>
+                    <p><i>${item.tipoInfractor}</i></p>
                     <p>(${item.numeral})</p>
                 </td>
             </tr>
@@ -644,7 +644,7 @@
                 {{each(i, item) INFRACCIONES}}
                 <tr>
                     <td style="border: 1px solid #000;">
-                        <p><i>"${item.tipo_infractor}"</i></p>
+                        <p><i>"${item.tipoInfractor}"</i></p>
                         <p>${item.numeral}</p>
                     </td>
                     <td style="border: 1px solid #000;">
