--- a/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
@@ -50,8 +50,8 @@
                                 <th></th>
                                 <th>N°</th>
                                 <th>Fecha de Registro</th>
-                                <th>Número de Incripción</th>
-                                <th>Fecha de Incripción</th>
+                                <th>Número de Inscripción</th>
+                                <th>Fecha de Inscripción</th>
                                 <th>Modalidad</th>
                                 <th>Título Habililitante</th>
                                 <th>Titular</th>
