--- a/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
@@ -1059,7 +1059,7 @@
                                                         <label for="txtTotalDI" class="text-small">TOTAL</label>
                                                         <div class="input-group input-group-sm">
                                                             <input id="txtTotalDI" type="text" class="form-control form-control-sm" style="font-size: 24px;" placeholder="Total" value="0.00" disabled />
-                                                            <span class="input-group-text"><i class="fa fa-plus-square" style="cursor: pointer; font-size: 36px; color: green " data-toggle="tooltip" data-placement="top" title="Calcular" onclick="ManTHabilitante.fnCalcularDivisionInterna();"></i></span>
+                                                            <span class="input-group-text"><i class="fa fa-calculator" style="cursor: pointer; font-size: 36px; color: green " data-toggle="tooltip" data-placement="top" title="Calcular" onclick="ManTHabilitante.fnCalcularDivisionInterna();"></i></span>
                                                         </div>
                                                     </div>
                                                 </div>
