Corrección OBS ROrejon REQ-359

--- a/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
@@ -41,7 +41,7 @@
                                 <th>N°</th>
                                 <th>Fecha de registro</th>
                                 <th>Modalidad</th>
-                                <th>Nro THabililitante</th>
+                                <th>Nro THabilitante</th>
                                 <th>Titular</th>
                                 <th>R. Legal</th>
                                 <th>Región</th>
@@ -53,7 +53,7 @@
                                 <th>Número de Inscripción</th>
                                 <th>Fecha de Inscripción</th>
                                 <th>Modalidad</th>
-                                <th>Título Habililitante</th>
+                                <th>Título Habilitante</th>
                                 <th>Titular</th>
                                 <th>Departamento</th>
 
